--- a/scss/form-builder.scss
+++ b/scss/form-builder.scss
@@ -2,12 +2,12 @@
   .react-form-builder-preview {
     // position: relative;
     // width: 70%;
-    border: 1px solid #ddd;
+    border: 1px solid #f1f1f1;
     background: #fafafa;
     padding: 10px;
-    box-shadow: 0 0 2px 1px rgba(0,0,0,0.1);
+    box-shadow: 0 0 40px 6px rgba(240, 240, 240, 45%);
     min-height: 750px;
-    width:100%;
+    width: 100%;
 
     .preview-page-break {
       padding: 5px 0;
@@ -66,10 +66,11 @@
       height: 100%;
       // width: 0;
       width: 715px;
-      transition: .5s;
+      transition: 0.5s;
       overflow-y: auto;
 
-      h4, .dismiss-edit {
+      h4,
+      .dismiss-edit {
         margin-bottom: 30px;
       }
       .dismiss-edit {
@@ -132,7 +133,7 @@
       }
     }
     .Sortable {
-      transition: opacity .25s ease-in;
+      transition: opacity 0.25s ease-in;
       position: relative;
       cursor: move;
       -webkit-touch-callout: none;
@@ -143,20 +144,27 @@
       user-select: none;
       .rfb-item {
         padding: 10px 20px;
+        outline: 1px solid #ddd;
+        background: #fff;
+
         &.SortableItem {
           position: relative;
           .form-group {
             pointer-events: none;
-            label, select, input, a {
+            label,
+            select,
+            input,
+            a {
               cursor: move;
             }
-            input[type='date'] {
+            input[type="date"] {
               height: 42px;
             }
             .react-star-rating {
               display: block;
             }
-            .checkbox-label, .radio-label {
+            .checkbox-label,
+            .radio-label {
               font-weight: normal;
               display: block;
             }
@@ -176,27 +184,23 @@
         &.is-placeholder {
           display: block;
           z-index: auto;
-          opacity: .4;
+          opacity: 0.4;
           border: 2px #ccc dashed;
         }
         .toolbar-header {
           opacity: 0;
           z-index: 100;
-          position: relative;
-          .label {
-            position: absolute;
-            left: 20px;
-          }
-          .toolbar-header-buttons {
-            position: absolute;
-            right: 20px;
-            margin-top:-20px;
-          }
+          display: flex;
+          justify-content: space-between;
+          align-content: center;
+          align-items: center;
         }
         &:hover {
-          box-shadow: inset 0 0 5px #ddd;
-          background: #fff;
-          select, input {
+          outline: 1px solid #ddd;
+          background-color: rgba(125, 254, 252, 0.05);
+
+          select,
+          input {
             cursor: move;
             pointer-events: none;
           }
@@ -207,25 +211,22 @@
       }
     }
     &.is-editing {
-      // .Sortable {
-      //   opacity: .5;
-      //   transition: opacity .25s ease-in;
-      // }
+      .Sortable {
+        opacity: 0.5;
+        transition: opacity 0.25s ease-in;
+      }
       .edit-form {
         z-index: 2000;
         border-right: 1px solid #ddd;
-        box-shadow: 0 0 2px 1px rgba(0,0,0,0.1);
-        // width: 80%;
+        box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.1);
         left: 0;
-        transition: .5s;
+        transition: 0.5s;
       }
     }
   }
 
   .react-form-builder-toolbar {
     width: 100%;
-    background: #fff;
-    margin-top: -30px;
 
     h4 {
       margin-top: 0;
@@ -270,7 +271,7 @@
 
 .image-upload-preview {
   border: 4px solid #fff;
-  box-shadow: 0 0 2px 2px rgba(0,0,0,0.1);
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .btn-image-clear {
@@ -278,7 +279,7 @@
   padding: 15px;
 }
 
-@media ( max-width: $screen-sm-min ) {
+@media (max-width: $screen-sm-min) {
   .react-form-builder {
     position: relative;
 
@@ -311,7 +312,6 @@
     }
 
     .react-form-builder-toolbar {
-
       h4 {
         padding: 10px;
         background: #7a0019;
@@ -326,8 +326,8 @@
       -webkit-transition: transform 0.5s;
       transition: transform 0.5s;
 
-      -webkit-transform: translate(0,0);
-      transform: translate(0,0);
+      -webkit-transform: translate(0, 0);
+      transform: translate(0, 0);
 
       right: 0;
       border-top: 2px solid #ccc;
@@ -339,8 +339,8 @@
     }
 
     .active-toolbar {
-      -webkit-transform: translate(0,-300px);
-      transform: translate(0,-300px);
+      -webkit-transform: translate(0, -300px);
+      transform: translate(0, -300px);
     }
   }
 
@@ -406,14 +406,15 @@
 }
 
 .form-place-holder {
-  margin:10px; 
-  border:2px dashed #bbb;
-  -moz-border-radius:5px;
-  -webkit-border-radius:5px;
-  border-radius:5px;
-  padding:25px;
-  text-align:center;
-  font:20pt bold,"Vollkorn";color:#bbb
+  margin: 10px;
+  border: 2px dashed #bbb;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  padding: 25px;
+  text-align: center;
+  font: 20pt bold, "Vollkorn";
+  color: #bbb;
 }
 
 .form-place-holder-hidden {
